[package]
name = "codecrafters-bittorrent"
version = "0.1.0"
authors = ["Rohit Agarwal <rohit@@codingpapa.net>"]
edition = "2024"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_bencode = "0.2"
reqwest = "0.12"
serde_bytes = "0.11.17"

[dev-dependencies]
assert_cmd = "2"
