[package]
name = "codecrafters-bittorrent"
version = "0.1.0"
authors = ["Rohit Agarwal <rohit@@codingpapa.net>"]
edition = "2024"

[dependencies]
serde_bencode = "0.2.4"
serde_bytes = "0.11.17"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"

[dev-dependencies]
assert_cmd = "2.0.17"
tempfile = "3.20.0"
indoc = "2.0.6"
