[package]
name = "codecrafters-bittorrent"
version = "0.1.0"
authors = ["Rohit Agarwal <rohit@@codingpapa.net>"]
edition = "2024"

[dependencies]
serde_bencode = "0.2.4"
serde_bytes = "0.11.17"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sha1 = "0.11.0-pre.5"
hex = "0.4.3"
reqwest = {  version = "0.12.15", features = ["blocking"] }
url = "2.5.4"
rand = "0.9.1"

[dev-dependencies]
assert_cmd = "2.0.17"
tempfile = "3.20.0"
indoc = "2.0.6"
